<resources>
    <string name="app_name">ShopList</string>
    <string name="your_product">I tuoi prodotti</string>
    <string name="conferma_back">Confermi di voler tornare indietro?</string>
    <string name="OK">OK</string>
    <string name="NO">NO</string>
    <string name="add_product">Aggiungi prodotto</string>
    <string name="nome_prodotto">Nome prodotto:</string>
    <string name="descrizione_prodotto">Descrizione prodotto:</string>
    <string name="attenzione">ATTENZIONE</string>
    <string name="errore_generico">errore generico</string>
    <string name="nessun_prodotto_aggiunto">Nessun prodotto aggiunto</string>
    <string name="aggiungi">Aggiungi prodotto</string>
    <string name="nome_non_valorizzato">Nome non valorizzato</string>
    <string name="nessun_elemento_da_visualizzare">Nessun elemento da visualizzare</string>
    <string name="conferma_eliminazione">Sei sicuro di voler eliminare il prodotto con nome :</string>
    <string name="dettaglio_prodotto">Dettaglio prodotto</string>
    <string name="immagine_prodotto">immagine prodotto</string>
    <string name="modifica_prodotto">modifica_prodotto</string>
    <string name="elimina_prodotto">elimina_prodotto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantita_prodotto">quantita</string>
    <string name="edit_tag">modifica</string>
    <string name="item_name">Nome prodotto</string>
    <string name="item_descriprion">Descrizione Prodotto</string>
    <string name="item_quantita">Quantita</string>
    <string name="descripion_tag">Dettaglio</string>
    <string name="id_prodotto_non_reperito">Prodotto non trovato, riavviare app</string>
    <string name="seleziona_da_dove_reperire_immagine">Seleziona da dove reperire l\'immagine</string>
    <string name="inserimento_foto_camera">Fotocamera</string>
    <string name="inserimento_foto_galleria">Galleria</string>
    <string name="conferma_aggiunta">Conferma</string>
    <string name="seleziona_immagine">Carica...</string>
    <string name="permission_not_granted">Permessi non accettati</string>
    <string name="impossibile_salvare_immagine_riprova">Impossibile salvare foto, riprova</string>
</resources>
