<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#BF0F0F0F"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@android:color/holo_orange_dark">

        <ImageView
            android:id="@+id/immagine_prodotto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#73EEF1F1"
            android:padding="2dp"
            android:contentDescription="@string/immagine_prodotto" />

        <TextView
            android:id="@+id/nome_prodotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/immagine_prodotto"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descrizione_prodotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nome_prodotto"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/immagine_prodotto"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/modifica_prodotto"
            android:src="@drawable/modifica_icon"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/elimina_prodotto"
            android:padding="4dp"
            android:contentDescription="@string/modifica_prodotto" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/elimina_prodotto"
            android:src="@drawable/delete_icon"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:contentDescription="@string/elimina_prodotto"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>