<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_toolbar" />

    <RelativeLayout
        android:id="@+id/relativeAggiungi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:background="@color/white"
        tools:context="com.academy.shoplist.activity.AggiungiProdottoActivity"
        android:layout_gravity="center_horizontal">


        <TextView
            android:id="@+id/textview_nome_prodotto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@color/arancio"
            android:text="@string/nome_prodotto"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_nome_prodotto"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/textview_nome_prodotto"
            android:background="@null"
            android:padding="4dp"
            android:ems="10"/>

        <TextView
            android:id="@+id/textview_descrizione_prodotto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_nome_prodotto"
            android:background="@color/arancio"
            android:layout_alignStart="@+id/textview_nome_prodotto"
            android:padding="4dp"
            android:text="@string/descrizione_prodotto"
            android:textSize="30sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/editText_descrizione_prodotto_layout"
            android:layout_width="match_parent"
            android:layout_below="@+id/textview_descrizione_prodotto"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <EditText
                android:id="@+id/editText_descrizione_prodotto"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:padding="4dp"
                android:maxLength="500"/>

        </android.support.design.widget.TextInputLayout>




        <TextView
            android:id="@+id/textview_quantita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/arancio"
            android:layout_below="@+id/editText_descrizione_prodotto_layout"
            android:layout_alignStart="@+id/textview_descrizione_prodotto"
            android:padding="4dp"
            android:text="@string/quantita_prodotto"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_quantita"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/textview_quantita"
            android:background="@null"
            android:padding="4dp" />
    </RelativeLayout>
</LinearLayout>